--- a/apper/apper.css
+++ b/apper/apper.css
@@ -261,7 +261,8 @@
   display: block;
   position: relative;
   height: 20px;
-  padding-left: 28px;
+  margin: 8px 0;
+  padding-left: 26px;
   font-size: 14px;
 }
 
@@ -275,7 +276,7 @@
 .apper-checkbox > div {
   position: absolute;
   top: 2px;
-  left: 2px;
+  left: 1px;
   height: 16px;
   width: 16px;
   border-radius: 4px;
@@ -430,4 +431,37 @@
 .apper-button-list > div > button:hover {
   background: #ccc3;
   cursor: pointer;
+}
+
+
+.apper-number-input {
+  display: block;
+  position: relative;
+  height: 32px;
+  margin: 8px 0;
+  padding-left: 26px;
+  font-size: 14px;
+}
+
+.apper-number-input > input {
+  position: relative;
+  width: 64px;
+  box-sizing: border-box;
+  margin-left: 8px;
+  border: none;
+  outline: 2px solid transparent;
+  padding: 6px;
+  border-radius: 6px;
+  background: #222c;
+  color: #ccc;
+  font-family: 'Cousine', monospace;
+  font-size: 13px;
+  line-height: 20px;
+  transition: outline-color 0.5s;
+}
+
+.apper-number-input > img {
+  position: absolute;
+  left: 0;
+  top: 6px;
 }
